Here's the commented version of the code:

```c++
# Copyright 2024 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""The Python implementation of the GRPC helloworld.Greeter server with observability enabled."""

from collections import defaultdict
from concurrent import futures
import logging
import time

import grpc
import grpc_observability
import helloworld_pb2
import helloworld_pb2_grpc
import open_telemetry_exporter
from opentelemetry.sdk.metrics import MeterProvider
from opentelemetry.sdk.metrics.export import PeriodicExportingMetricReader

# Constants
_OTEL_EXPORT_INTERVAL_S = 0.5  # Interval in seconds for exporting metrics
_SERVER_PORT = "50051"         # Port number for the gRPC server

class Greeter(helloworld_pb2_grpc.GreeterServicer):
    """Implementation of the Greeter service defined in the protobuf interface."""
    
    def SayHello(self, request, context):
        """
        Handles SayHello RPC requests.
        
        Args:
            request: Contains the name parameter from the client
            context: RPC context
            
        Returns:
            HelloReply: Response message containing the greeting
        """
        message = request.name
        return helloworld_pb2.HelloReply(message=f"Hello {message}")

def serve():
    """
    Configures and starts the gRPC server with OpenTelemetry observability.
    Sets up metrics collection and export, starts the server, and handles shutdown.
    """
    
    # Initialize metrics storage and OpenTelemetry exporter
    all_metrics = defaultdict(list)
    otel_exporter = open_telemetry_exporter.OTelMetricExporter(
        all_metrics, print_live=False
    )
    
    # Configure metric reader with the exporter
    reader = PeriodicExportingMetricReader(
        exporter=otel_exporter,
        export_interval_millis=_OTEL_EXPORT_INTERVAL_S * 1000,
    )
    
    # Set up meter provider with the metric reader
    provider = MeterProvider(metric_readers=[reader])

    # Configure and register OpenTelemetry plugin for gRPC observability
    otel_plugin = grpc_observability.OpenTelemetryPlugin(
        meter_provider=provider
    )
    otel_plugin.register_global()

    # Create and configure gRPC server
    server = grpc.server(
        thread_pool=futures.ThreadPoolExecutor(max_workers=10),
    )
    # Add Greeter service to the server
    helloworld_pb2_grpc.add_GreeterServicer_to_server(Greeter(), server)
    server.add_insecure_port("[::]:" + _SERVER_PORT)
    server.start()
    print("Server started, listening on " + _SERVER_PORT)

    # Run server for 10 seconds to collect metrics
    time.sleep(10)
    
    # Print collected metrics before shutdown
    print("Metrics exported on Server side:")
    for metric in all_metrics:
        print(metric)

    # Clean shutdown of server and observability components
    server.stop(0)
    otel_plugin.deregister_global()

if __name__ == "__main__":
    # Configure basic logging and start the server
    logging.basicConfig()
    serve()
```